# parser-api

./: .gitmodules  abstract_parser.py  async_fifo.py  async_stdin.py  base_parser.py  pipe_reader.py  printer_parser.py  pyproject.toml  xml_base_parser.py
example/: copy_parser.py  xml_printer_parser.py
parser_api/: async_fifo.py  async_stdin.py  base_parser.py  error.py  xml_base_parser.py
parser_api/example/: copy_parser.py  printer_parser.py  xml_printer_parser.py
parser_api/test/: async_fifo_test.py  async_fifo_test.sh  async_stdin_test.py  async_stdin_test.sh  base_parser_test.py  base_parser_test.sh  pipe_reader_test.py  pipe_reader_test.sh  xml_base_parser_test.py  xml_base_parser_test.sh
test/: async_fifo_test.py  async_fifo_test.sh  async_stdin_test.py  async_stdin_test.sh  base_parser_test.py  base_parser_test.sh  index.html  pipe_reader_test.py  pipe_reader_test.sh  printer_parser.py  sample.xml  xml_base_parser_test.py  xml_base_parser_test.sh
